[tool.poetry]
name = "jefferson-street-api-python"
version = "0.1.0"
description = "A Python interface to the Jefferson Street REST API."
authors = ["Mahfuj Ahbab"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.3.5"
requests-mock = "^1.12.1"
pytest-cov = "^6.1.1"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
mypy = "^1.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
